--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
             <div class="flex flex-wrap gap-4 mt-4 text-sm">
                 <div class="flex items-center">
                     <i class="fas fa-phone-alt mr-2"></i>
-                    <span class="editable" data-field="phone">+91 XXXXX XXXXX</span>
+                    <span class="editable" data-field="phone">+91 79720 43747</span>
                 </div>
                 <div class="flex items-center">
                     <i class="fas fa-envelope mr-2"></i>
-                    <span class="editable" data-field="email">shreya.d@example.com</span>
+                    <span class="editable" data-field="email">shreyadhamankar3@gmail.com</span>
                 </div>
                 <div class="flex items-center">
                     <i class="fas fa-map-marker-alt mr-2"></i>
@@ -111,15 +111,15 @@
                             <tbody>
                                 <tr>
                                     <td class="p-2 border border-teal-100">B.Tech in IT</td>
-                                    <td class="p-2 border border-teal-100">XYZ College of Engineering</td>
-                                    <td class="p-2 border border-teal-100">2020 - 2024</td>
-                                    <td class="p-2 border border-teal-100">8.9/10</td>
+                                    <td class="p-2 border border-teal-100">MIT Academy of Engineering, Alandi</td>
+                                    <td class="p-2 border border-teal-100">2024 - 2028</td>
+                                    <td class="p-2 border border-teal-100">8.4/10</td>
                                 </tr>
                                 <tr>
                                     <td class="p-2 border border-teal-100">HSC (12th Grade)</td>
-                                    <td class="p-2 border border-teal-100">ABC Junior College</td>
-                                    <td class="p-2 border border-teal-100">2018 - 2020</td>
-                                    <td class="p-2 border border-teal-100">92%</td>
+                                    <td class="p-2 border border-teal-100">Mauli Junior College</td>
+                                    <td class="p-2 border border-teal-100">2022 - 2024</td>
+                                    <td class="p-2 border border-teal-100">86.83%</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -232,7 +232,6 @@
                             </div>
                             <div>
                                 <h3 class="font-medium text-teal-800">Python Essentials (Cisco)</h3>
-                                <p class="text-xs text-gray-500 mt-1">Issued: June 2022</p>
                             </div>
                         </div>
                         
@@ -243,7 +242,6 @@
                             </div>
                             <div>
                                 <h3 class="font-medium text-teal-800">SQL Certification</h3>
-                                <p class="text-xs text-gray-500 mt-1">Issued: March 2023</p>
                             </div>
                         </div>
                     </div>
@@ -256,9 +254,9 @@
                 <div>
                     <h2 class="text-xl font-semibold text-teal-700 section-title">Achievements</h2>
                     <ul class="mt-3 space-y-2 list-disc list-inside text-sm">
-                        <li>Led a team of 5 in developing an award-winning college project</li>
+                        <li>Leadership Roles in Academic Projects</li>
                         <li>1st place in inter-college technical paper presentation</li>
-                        <li>National level classical dance competition winner</li>
+                        <li>Published my poems in an anthropology to writerspocket publishing company</li>
                     </ul>
                 </div>
 
@@ -266,7 +264,7 @@
                 <div>
                     <h2 class="text-xl font-semibold text-teal-700 section-title">Extracurricular</h2>
                     <div class="mt-3 flex flex-wrap gap-2">
-                        <span class="px-2 py-1 bg-teal-50 text-teal-700 text-xs rounded">Classical Dance</span>
+                        <span class="px-2 py-1 bg-teal-50 text-teal-700 text-xs rounded">Dance</span>
                         <span class="px-2 py-1 bg-teal-50 text-teal-700 text-xs rounded">Drawing</span>
                         <span class="px-2 py-1 bg-teal-50 text-teal-700 text-xs rounded">Poetry</span>
                         <span class="px-2 py-1 bg-teal-50 text-teal-700 text-xs rounded">Creative Writing</span>
