--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                 <span class="skill-pill px-2 py-1 rounded-full text-xs text-white">Java</span>
                             </div>
                             <!-- PROJECT 2 LINK: Add GitHub or live URL here -->
-                            <a href="#" target="_blank" rel="noopener noreferrer" class="inline-block mt-2 text-sm text-[#5A3249] hover:underline">
+                            <a href="https://may-day-419.github.io/EMOTION.TRACKER/" target="_blank" rel="noopener noreferrer" class="inline-block mt-2 text-sm text-[#5A3249] hover:underline">
                                 <i class="fas fa-external-link-alt mr-1"></i> View Project
                             </a>
                             <!-- EDIT: Replace with actual project link like: https://github.com/shreya-dhamankar/sentiment-analysis -->
@@ -232,10 +232,6 @@
                         <!-- CERT 1 -->
                         <div class="flex items-start gap-3">
                             <a href="#" target="_blank" rel="noopener noreferrer" class="flex-shrink-0">
-                                <img src="Screenshot 2025-04-25 193735.png" alt="Certificate 1" class="w-15 h-10 object-cover cert-thumbnail rounded">
-                                <!-- EDIT: Replace CERTIFICATE IMAGE URL and LINK here -->
-                                <!-- PASTE CERTIFICATE IMAGE URL AND LINK BELOW -->
-                                <!-- Example: <img src="https://example.com/cert1.jpg" ...> -->
                             </a>
                             <div>
                                 <h3 class="font-semibold text-sm text-[#0B2545]">Python Essentials</h3>
@@ -245,11 +241,7 @@
 
                         <!-- CERT 2 -->
                         <div class="flex items-start gap-3">
-                            <a href="#" target="_blank" rel="noopener noreferrer" class="flex-shrink-0">
-                                <img src="Screenshot 2025-04-25 183723.png" alt="Certificate 2" class="w-15 h-10 object-cover cert-thumbnail rounded">
-                                <!-- EDIT: Replace CERTIFICATE IMAGE URL and LINK here -->
-                                <!-- PASTE CERTIFICATE IMAGE URL AND LINK BELOW -->
-                                <!-- Example: <img src="Screenshot 2025-04-25 193735.png" ...> -->
+                            <a href="#" target="_blank" rel="noopener noreferrer" class="flex-shrink-
                             </a>
                             <div>
                                 <h3 class="font-semibold text-sm text-[#0B2545]">Oracle SQL </h3>
@@ -260,10 +252,6 @@
                         <!-- CERT 3 -->
                         <div class="flex items-start gap-3">
                             <a href="#" target="_blank" rel="noopener noreferrer" class="flex-shrink-0">
-                                <img src="Screenshot 2025-08-11 143748" alt="Certificate 3" class="w-15 h-10 object-cover cert-thumbnail rounded">
-                                <!-- EDIT: Replace CERTIFICATE IMAGE URL and LINK here -->
-                                <!-- PASTE CERTIFICATE IMAGE URL AND LINK BELOW -->
-                                <!-- Example: <img src="Screenshot 2025-04-25 183723.png" ...> -->
                             </a>
                             <div>
                                 <h3 class="font-semibold text-sm text-[#0B2545]">Introduction to Cybersecurity</h3>
@@ -271,6 +259,9 @@
                             </div>
                         </div>
                     </div>
+             <a href="https://drive.google.com/file/d/1dk0fia54N-PFkzgl_HhTUv-sNIcz0z6Z/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="inline-block mt-2 text-sm text-[#5A3249] hover:underline">
+                                <i class="fas fa-external-link-alt mr-1"></i> Get Certificates
+                            </a>
                 </section>
 
                 <!-- ACHIEVEMENTS -->
