--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <p><i class="fas fa-map-marker-alt mr-2"></i> Pune, India</p>
                     <div class="flex space-x-3 mt-2">
                         <!-- EDIT: Replace SOCIAL LINKS here -->
-                        <a href="https://linkedin.com/in/shreya-dhamankar" target="_blank" rel="noopener noreferrer" class="hover:text-[#F2A6B3]">
+                        <a href="https://www.linkedin.com/in/shreya-dhamankar-181541333?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" rel="noopener noreferrer" class="hover:text-[#F2A6B3]">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
                         <a href="https://github.com/Shreya010506" target="_blank" rel="noopener noreferrer" class="hover:text-[#F2A6B3]">
@@ -259,7 +259,7 @@
                             </div>
                         </div>
                     </div>
-             <a href="https://drive.google.com/file/d/1dk0fia54N-PFkzgl_HhTUv-sNIcz0z6Z/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="inline-block mt-2 text-sm text-[#5A3249] hover:underline">
+             <a href="https://drive.google.com/drive/folders/15Cm1amYoefHEoBIwUejHF7vK2VrE7zzo?usp=drive_link" target="_blank" rel="noopener noreferrer" class="inline-block mt-2 text-sm text-[#5A3249] hover:underline">
                                 <i class="fas fa-external-link-alt mr-1"></i> Get Certificates
                             </a>
                 </section>
