--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
                         </div>
 
                         <!-- CERT 2 -->
-                        <div class="flex items-start gap-4">
-                            <a href="#" target="_blank" rel="noopener noreferrer" class="flex-shrink-
+                        <div class="flex items-start gap-3">
+                            <a href="#" target="_blank" rel="noopener noreferrer" class="flex-shrink-0">
                             </a>
                             <div>
                                 <h3 class="font-semibold text-sm text-[#0B2545]">Oracle SQL </h3>
