--- a/index.html
+++ b/index.html
@@ -244,10 +244,11 @@
                             <a href="#" target="_blank" rel="noopener noreferrer" class="flex-shrink-0">
                             </a>
                             <div>
-                                <h3 class="font-semibold text-sm text-[#0B2545]">Oracle SQL </h3>
-                                <p class="text-gray-500 text-xs">Great learning</p>
+                                <h3 class="font-semibold text-sm text-[#0B2545]">Oracle SQL</h3>
+                                <p class="text-gray-500 text-xs">Great Learning</p>
                             </div>
                         </div>
+
 
                         <!-- CERT 3 -->
                         <div class="flex items-start gap-3">
@@ -258,9 +259,10 @@
                                 <p class="text-gray-500 text-xs">Cisco</p>
                             </div>
                         </div>
-                    </div>
-             <a href="https://drive.google.com/drive/folders/15Cm1amYoefHEoBIwUejHF7vK2VrE7zzo?usp=drive_link" target="_blank" rel="noopener noreferrer" class="inline-block mt-2 text-sm text-[#5A3249] hover:underline">
+                        <a href="https://drive.google.com/drive/folders/15Cm1amYoefHEoBIwUejHF7vK2VrE7zzo?usp=drive_link" target="_blank" rel="noopener noreferrer" class="inline-block mt-2 text-sm text-[#5A3249] hover:underline">
                                 <i class="fas fa-external-link-alt mr-1"></i> Get Certificates
+                    </div>
+             
                             </a>
                 </section>
 
