--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             </p>
                             
                             <!-- PROJECT 1 LINK: Add GitHub or live URL here -->
-                            <a href="#" target="_blank" rel="noopener noreferrer" class="inline-block mt-2 text-sm text-[#5A3249] hover:underline">
+                            <a href="https://drive.google.com/drive/folders/1aXz9vN6zlxNmLbdPiceAGliGdEd7JQEI?usp=drive_link" target="_blank" rel="noopener noreferrer" class="inline-block mt-2 text-sm text-[#5A3249] hover:underline">
                                 <i class="fas fa-external-link-alt mr-1"></i> View Project
                             </a>
                             <!-- EDIT: Replace with actual project link like: https://github.com/shreya-dhamankar/parking-optimization -->
